# overlay-forge

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
bridge-files/: OPENAI_APP_BRIDGE.md
docs/: ARCHITECTURE.md  BRIDGE_FILES.md  DATA_MODEL.md  DEFERRED_ITEMS.md  DESIGN_NOTES.md  FEATURE_SCOPE.md  GAMING_SCREENSHOTS.md  GAMING_SCREENSHOT_VALIDATION.md  GEARBLOCKS.md  GEARBLOCKS_BEPINEX_PLUGIN.md  GEARBLOCKS_CONSTRUCTION_DECODER.md  GEARBLOCKS_GEARLIB.md  GEARBLOCKS_PARTS_CATALOG.md  GEARBLOCKS_PLUGIN.md  GEARBLOCKS_RUNTIME.md  GEARBLOCKS_RUNTIME_INTERFACES.md  KNOWN_ISSUES.md  MEDIA_LIBRARY.md  MILESTONE_0.md  MILESTONE_1.md  MILESTONE_10.md  MILESTONE_11.md  MILESTONE_12.md  MILESTONE_13.md  MILESTONE_2.md  MILESTONE_3.md  MILESTONE_4.md  MILESTONE_5.md  MILESTONE_6.md  MILESTONE_7.md  MILESTONE_8.md  MILESTONE_9.md  NEXT_VALIDATION_REMINDER.md  PROJECT_DEFERRED_ITEMS.md  PROJECT_HISTORY.md  PROJECT_OVERVIEW.md  PROJECT_PLAN.md  PROJECT_RULES.md  REPAIR_RESELL.md  SMOKING_CESSATION.md  (+3 more)
gearblocks-bepinex-templates/OverlayForgeGearBlocksPlugin/: OverlayForgeGearBlocksPlugin.csproj.template  PartPreviewRenderer.cs  Plugin.cs.template  README.md
gearblocks-bepinex-templates/OverlayForgeGearLibPlugin/: OverlayForgeGearLibPlugin.csproj.template  Plugin.cs.template  README.md
gearblocks-script-mods/OverlayForgeConstructionExporter/: main.lua.template  meta.json
gearblocks-script-mods/OverlayForgeTools/: main.lua.template  meta.json
scripts/: start-debug.ps1  stop-overlay-forge.ps1  tauri-dev-with-log.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  gearblocks_api.rs  gearblocks_api_scraper.rs  gearblocks_scene_context.rs  github.rs  hotkeys.rs  lib.rs  lifecycle.rs  main.rs  openai.rs  repair_resell.rs  windows.rs
src-tauri/src/media/: commands.rs  domain.rs  mod.rs  provider.rs  repository.rs  service.rs
src-tauri/src/media/books/: commands.rs  domain.rs  google_books.rs  hardcover.rs  merge.rs  mod.rs  open_library.rs  provider.rs  repository.rs  service.rs
src/app/: App.tsx  GameBuildGuideOverlayApp.tsx  GameChatOverlayApp.tsx
src/components/: ChatWorkspace.tsx  ComponentHost.tsx  WindowControls.tsx
src/services/: appStatus.ts  calendar.ts  gaming.ts  github.ts  media.ts  mediaBooks.ts  notes.ts  planningChat.ts  projects.ts  (+7 more)
(+30 files in other folders)
