[package]
name = "overlay-forge"
version = "0.1.0"
description = "A local-first desktop overlay command hub."
authors = ["Overlay Forge"]
edition = "2021"

[lib]
name = "overlay_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.0", features = [] }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-global-shortcut = "2.3.0"

