[package]
name = "overlay-forge"
version = "0.5.0"
description = "A local-first desktop overlay command hub."
authors = ["Overlay Forge"]
edition = "2021"

[lib]
name = "overlay_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.0", features = ["protocol-asset"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-global-shortcut = "2.3.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
png = "0.18.1"
base64 = "0.22"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
tauri-plugin-dialog = "2.7.1"
flate2 = "1.1.9"
bson = "3.1.0"
